--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <h1> Présentation personnelle </h1>
-<h2> Sommaire </h1>
+<h2> Sommaire </h2>
+<br>
+<pre>
+1) Qui suis-je ?
+2) Qu'est ce que j'aime ?
+3) Où est-ce que je traîne sur la toile ?
+4) Et les réseaux sociaux ?
+</pre>
