--- a/index.html
+++ b/index.html
@@ -6,3 +6,12 @@
 3) Où est-ce que je traîne sur la toile ?
 4) Et les réseaux sociaux ?
 </pre>
+<h3> Qui suis-je ? </h3>
+<pre> 
+Bonjour, cher lecteur, ou chère lectrice. 
+Je m'appelle Alexandre Michaud, j'ai actuellement 22 ans et vis actuellement à Brest, bien qu'étant originaire de Tours.
+J'ai fait la totalité de mes études sur Tours, où j'y ai obtenu un baccalauréat S en 2015. Suite à cela, je suis entré 
+à l'UFR Sciences et Techniques de Tours pour la L1 Maths/Info, puis basculer en L2 Info à Blois, mais j'ai hélas échoué aux examens de fin d'année à 3 reprises.
+Niveau expérience, hormis les cours de L1, et les consultations sur W3S, je n'ai pas hélas pas grand chose à vous offrir.
+<br>
+<h3> Qu'est ce que j'aime ? </h3>
