--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@ Je m'appelle Alexandre Michaud, j'ai actuellement 22 ans et vis actuellement à 
 J'ai fait la totalité de mes études sur Tours, où j'y ai obtenu un baccalauréat S en 2015. Suite à cela, je suis entré 
 à l'UFR Sciences et Techniques de Tours pour la L1 Maths/Info, puis basculer en L2 Info à Blois, mais j'ai hélas échoué aux examens de fin d'année à 3 reprises.
 Niveau expérience, hormis les cours de L1, et les consultations sur W3S, je n'ai pas hélas pas grand chose à vous offrir.
+</pre>
 <br>
 <h3> Qu'est ce que j'aime ? </h3>
