--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ Bonjour, cher lecteur, ou chère lectrice.
 Je m'appelle Alexandre Michaud, j'ai actuellement 22 ans et vis actuellement à Brest, bien qu'étant originaire de Tours.
 J'ai fait la totalité de mes études sur Tours, où j'y ai obtenu un baccalauréat S en 2015. Suite à cela, je suis entré 
 à l'UFR Sciences et Techniques de Tours pour la L1 Maths/Info, puis basculer en L2 Info à Blois, mais j'ai hélas échoué aux examens de fin d'année à 3 reprises.
-Niveau expérience, hormis les cours de L1, et les consultations sur W3S, je n'ai pas hélas pas grand chose à vous offrir.
+Niveau expérience, hormis les cours de L1, je n'ai pas hélas pas grand chose à vous offrir.
 </pre>
 <hr>
 <h3> Qu'est ce que j'aime ? </h3>
-
+<p> Concernant mes gouts, il y a tellement de choses à dire que je ne sais pas par où commencer. <br> Ah si ! On va commencer par les mangas et la culture japonaise, car le Japon c'est le top ! 
   
   
   
