--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Ensuite on va continuer par les jeux vidéos du genre : <br>
 Ou encore :
 <br>
 <img src = "https://cdn03.nintendo-europe.com/media/images/10_share_images/portals_3/H2x1_CharacterHub_Metroid_image1600w.jpg" alt = "Metroid" width= "400" height= "250">
-Et il y en a encore un bon paquet à lister !
+Et il y en a encore un bon paquet à lister ! <br>
 Et pour finir, un peu de musique, un peu de voitures, des jeux de société en tous genre, et l'essentiel est dit !
 </p>
 <hr>
@@ -40,5 +40,5 @@ Et pour cloturer le top 5, histoire de parler un peu codage, le site W3S.
 </p>
 <hr>
 <h3> Et les réseaux sociaux ? </h3>
-De base je suis très peu sur les réseaux sociaux, tout simplement par choix, donc je ne pourrai vous donner de lien 
+De base je suis très peu sur les réseaux sociaux, tout simplement par choix, donc je ne pourrai vous donner de lien, navré.
 </html>
