--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@ Et pour cloturer le top 5, histoire de parler un peu codage, le site W3S.
 <hr>
 <h3> Et les réseaux sociaux ? </h3>
 <p>De base je suis très peu sur les réseaux sociaux, tout simplement par choix, donc je ne pourrai vous donner de lien, navré. <br>
-Cependant, je vais vous donner le lien de </p> <a href="https://codecombat.com/user/omega-master" mon profil CodeCombat</a>.</p>
-<p><a href="https://codecombat.com/user/omega-master" mon profil CodeCombat</a>.</p>
+Cependant, je vais vous donner le lien de </p> <p><a href="https://codecombat.com/user/omega-master" mon profil CodeCombat</a>.</p>
   
 <p>Du coup on arrive à la fin de cette petite page de présentation, merci d'avoir tout lu, j'espère que malgré le peu de contenu, ça vous plaira, et à bientôt qui sait.</p>
 </html>
