--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Ensuite on va continuer par les jeux vidéos du genre : <br>
 <br>
 Ou encore :
 <br>
-<img src = "https://cdn03.nintendo-europe.com/media/images/10_share_images/portals_3/H2x1_CharacterHub_Metroid_image1600w.jpg" alt = "Metroid" width= "400" height= "250">
+<img src = "https://cdn03.nintendo-europe.com/media/images/10_share_images/portals_3/H2x1_CharacterHub_Metroid_image1600w.jpg" alt = "Metroid" width= "400" height= "250"> <br>
 Et il y en a encore un bon paquet à lister ! <br>
 Et pour finir, un peu de musique, un peu de voitures, des jeux de société en tous genre, et l'essentiel est dit !
 </p>
