--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<body>
 
 <h1> Présentation personnelle </h1>
 <h2> Sommaire </h2>
@@ -44,4 +45,5 @@ Et pour cloturer le top 5, histoire de parler un peu codage, le site W3S.
 Cependant, je vais vous donner un petit lien malgré tout. <a href="https://codecombat.com/user/omega-master"> Mon profil CodeCombat</a></p>
   
 <p>Du coup on arrive à la fin de cette petite page de présentation, merci d'avoir tout lu, j'espère que malgré le peu de contenu, ça vous plaira, et à bientôt qui sait.</p>
+</body>
 </html>
