--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <h1> Présentation personnelle </h1>
 <h2> Sommaire </h2>
 <pre>
-1) Qui suis-je ?
-2) Qu'est ce que j'aime ?
-3) Où est-ce que je traîne sur la toile ?
-4) Et les réseaux sociaux ?
+I) Qui suis-je ?
+II) Qu'est ce que j'aime ?
+III) Où est-ce que je traîne sur la toile ?
+IV) Et les réseaux sociaux ?
 </pre>
 <h3> Qui suis-je ? </h3>
 <p>
