--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ Sachez également qu'en parlant de musique, de voitures, de jeux de société ou
 <p> Un héros discret, qui agit et rôde dans les espaces publics, mais sans pour autant se déplacer. Oui, vous avez bien compris, je parle d'Internet, et des possibilités illimités qu'il offre. <br>
 Malgré tout, si vous souhaitez des renseignements sur ses activités, ou peut-être même espérer le croiser sur la toile, voici les lieux où vous êtes susceptibles de l'apercevoir : <br>
 En premier lieu, 2 sites voués au divertissement que sont Youtube et iAnime, car n'oubliez pas que notre héros est un féru de mangas et de musique. <br>
-Ensuite, en tant que fan de jeux vidéos, il joue aussi directement sur la toile, c'est pourquoi vous pouvez retrouver notre protagoniste errer sans but tel un loup garou (loup garou en ligne), ou dériver dans l'immensité de l'espace (DarkOrbit). <br>
-Et bien évidemment, parce qu'il veut laisser son empreinte sur le réseau mondial, et pouvoir en apprendre davantage, il fréquente régulièrement W3S.
+Ensuite, en tant que fan de jeux vidéos, il joue aussi directement sur la toile, c'est pourquoi vous pouvez retrouver notre protagoniste errer sans but tel un loup garou (loup garou en ligne), ou dériver dans l'immensité de l'espace (DarkOrbit).
+<br>Et bien évidemment, parce qu'il veut laisser son empreinte sur le réseau mondial, et pouvoir en apprendre davantage, il fréquente régulièrement W3S.
 </p>
 <hr>
 <h3> Le monde de la socialisation </h3>
